@@ -5,6 +5,13 @@ use warnings;
 use Cwd 'abs_path';
 use POSIX ();
 
+# Workaround for bug #817083 - ensure debconf template is loaded now
+# so we can use it in prerm script.
+{
+    use Debconf::Client::ConfModule qw(:all);
+    version('2.0');
+}
+
 $|=1;
 
 # Predefined values:
