@@ -21,6 +21,7 @@ linux (4.6-1~exp2) UNRELEASED; urgency=medium
     linux-libc-dev and tools packages (Closes: #825024; thanks to YunQiang Su)
   * [mips*/*-malta] udeb: Add ata-modules package
   * linux-image: Stop setting $STEM in environment for maintainer script hooks
+  * linux-image: Add workaround for bug #817083 in debconf
 
   [ Aurelien Jarno ]
   * [mips64{,el}] Set CPU to MIPS64 R2.
